--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,3 +74,21 @@ a {
 .search-input, .search-input:focus, .search-input:hover, .search-input:active{
     border: 1px solid var(--color-one) !important;
 }
+
+.hero {
+    height: 100vh;
+    padding: 0px 32px;
+}
+
+.circle-link {
+    border: 1px solid var(--color-one);
+    border-radius: 10px;
+    padding: 1px 10px;
+    color: var(--color-one);
+}
+
+.circle-link:hover {
+    border: 1px solid var(--color-one);
+    background-color: var(--color-one);
+    color: var(--color-five);
+}
