Made some general improvements

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -7263,6 +7263,10 @@ textarea.form-control-lg {
   font-weight: 700 !important;
 }
 
+.fw-500 {
+  font-weight: 500 !important;
+}
+
 .fw-bolder {
   font-weight: bolder !important;
 }
