--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ html {
 }
 
 a {
-    text-decoration: none;
+    text-decoration: none !important;
 }
 
 .border-button-link {
@@ -32,6 +32,10 @@ a {
 
 .nav-link {
     padding: 7px 10px;
+}
+
+.nav-link:focus, .nav-link:hover {
+    color: var(--color-two);
 }
 
 .main-nav {
@@ -101,6 +105,10 @@ a {
     color: var(--color-five);
 }
 
+.services {
+    padding: 0px 32px 96px 32px;
+}
+
 .partners {
     margin-bottom: 96px;
     height: 95px;
@@ -111,4 +119,24 @@ a {
 
 .partners-icons img{
     padding-left: 60px;
+}
+
+.uk-panel {
+    width: fit-content;
+}
+
+.arrow-next-slide {
+    background: white !important;
+    border-radius: 100% !important;
+    color: #62646a !important;
+    padding: 10px 15px !important;
+    box-shadow: 0px 0px 10px #0000006b !important;
+}
+
+.services-title {
+    padding-left: 15px;
+}
+
+.card-text {
+    padding: 16px;
 }
