--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,7 @@ a {
 
 .search-input, .search-input:focus, .search-input:hover, .search-input:active{
     border: 1px solid var(--color-one) !important;
+    height: 50px;
 }
 
 .hero {
