--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -293,3 +293,11 @@ a {
     padding: 96px 67px;
     background-color: #f5f5f5;
 }
+
+.guides {
+    padding: 96px 82px;
+}
+
+.guide-img {
+    margin-bottom: 16px;
+}
