--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,9 @@
     --color-three: #98a9d7;
     --color-four: #7470b2;
     --color-five: #fff;
+    --horizontal-padding: 82px;
+    --vertical-padding: 96px;
+    --horizontal-padding-cutted: calc(var(--horizontal-padding) - 15px);
 }
 
 html {
@@ -44,7 +47,7 @@ a {
     position: fixed;
     display: flex;
     justify-content: space-between;
-    padding: 15px 82px;
+    padding: 15px var(--horizontal-padding);
     color: white;
     width: 100%;
     margin: auto;
@@ -102,7 +105,7 @@ a {
     background: url('../img/hero.jpg') no-repeat;
     background-size: cover;
     min-height: 100vh;
-    padding: 0px 82px;
+    padding: 0px var(--horizontal-padding);
     color: white;
 }
 
@@ -124,15 +127,15 @@ a {
 }
 
 .services {
-    padding: 0px 67px 96px 67px;
+    padding: 0px var(--horizontal-padding) var(--vertical-padding) var(--horizontal-padding);
 }
 
 .partners {
-    margin-bottom: 96px;
+    margin-bottom: var(--vertical-padding);
     height: 95px;
     color: #62646a;
     font-size: 16px;
-    padding: 0px 82px;
+    padding: 0px var(--horizontal-padding);
     background-color: #f5f5fb;
 }
 
@@ -162,11 +165,11 @@ a {
 
 .benefits, .business {
     background-color: rgb(187, 194, 216);
-    padding: 96px 82px;
+    padding: var(--vertical-padding) var(--horizontal-padding);
 }
 
 .business {
-    padding: 96px 82px;
+    padding: var(--vertical-padding) var(--horizontal-padding);
 }
 
 .benefits-texts, .announce-texts {
@@ -196,7 +199,7 @@ a {
 }
 
 .explore {
-    padding: 96px 82px;
+    padding: var(--vertical-padding) var(--horizontal-padding);
 }
 
 .card-img-explore {
@@ -240,7 +243,7 @@ a {
 }
 
 .shift-section {
-    padding: 96px 67px;
+    padding: var(--vertical-padding) var(--horizontal-padding-cutted);
 }
 
 .cartaz {
@@ -252,7 +255,7 @@ a {
 }
 
 .announce-texts, .banner-snippet {
-    margin-top: 96px;
+    margin-top: var(--vertical-padding);
     background-color: var(--color-two); 
     padding: 36px 76px;
 }
@@ -302,12 +305,12 @@ a {
 }
 
 .more-projects {
-    padding: 96px 67px;
+    padding: var(--vertical-padding) var(--horizontal-padding);
     background-color: #f5f5f5;
 }
 
 .guides {
-    padding: 96px 82px;
+    padding: var(--vertical-padding) var(--horizontal-padding);
 }
 
 .guide-img {
@@ -321,13 +324,13 @@ a {
 
 .banner-snippet {
     min-height:  440px;
-    padding: 0px 82px 96px 82px;
+    padding: 0px var(--horizontal-padding) var(--vertical-padding) var(--horizontal-padding);
     background-color: rgba(0, 0, 0, 0);
 }
 
 .banner-texts {
     background: url("../img/banner-snippet/background.png");
-    padding: 120px 96px;
+    padding: 120px var(--vertical-padding);
 }
 
 .banner-texts  h1{
@@ -343,7 +346,7 @@ a {
 }
 
 .footer {
-    padding: 82px 96px;
+    padding: var(--vertical-padding) var(--horizontal-padding);
     font-size: 16px;
 }
 
