--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -582,3 +582,13 @@ ul {
     padding: 10px 15px !important;
     box-shadow: 0px 0px 10px #0000006b !important;
 }
+
+.search-button-1 {
+    border: none !important;
+}
+
+.search-button-1:hover {
+    border: none !important;
+    background: white !important;
+    color: var(--color-two) !important;
+}
