--- a/assets/css/filter-kit.css
+++ b/assets/css/filter-kit.css
@@ -1,4 +1,4 @@
-.filter-category-kit, .filter-radio-kit {
+.filter-category-kit, .filter-radio-kit, .filter-budget-kit {
     padding: 10px 15px;
     border: 1px solid var(--bs-dark);
     background-color: #fff;
@@ -9,7 +9,7 @@
     position: relative;
 }
 
-.options-category-kit, .options-radio-kit {
+.options-category-kit, .options-radio-kit, .options-budget-kit {
     position: absolute;
     top: 44.5px;
     margin-top: 10px;
@@ -39,6 +39,17 @@
 .radio-button {
     vertical-align: middle;
     margin-bottom: 3.5px;
+}
+
+.left-budget-kit {
+    display: flex;
+    flex-direction: column;
+}
+
+.budget-input-kit {
+    width: 105px;
+    padding: 6px 7px;
+    border: 1px solid #7a7d85;
 }
 
 @keyframes byeIcon {
